Fix spacing between online status dot and text.

--- a/css/custom.css
+++ b/css/custom.css
@@ -212,7 +212,6 @@ img {
 .ja-sidebar {
 	grid-area: sidebar;
 	overflow: auto;
-	/* background: #533174; */
 	border: 1px solid #fff;
 }
 .ja-sidebar-thisuser {
@@ -287,7 +286,7 @@ img {
 	margin-top: 50px;
 }
 .ja-rightpadding1 {
-	padding-right: 2px;
+	padding-right: 1px;
 }
 .ja-horizontaldivider{
 	width:5px;
